--- a/index.html
+++ b/index.html
@@ -42,6 +42,68 @@
                 </ul>
             </div>
        </div>
-       
+
+       <div class="row">
+            <div class="col">
+                <img src="experience-islandsnow-bootstrap-logo.png" class="img-fluid rounded mx-auto d-block py-1">
+            </div> 
+       </div>
+       <div class="row justify-content-center pt-4">
+            <div class="col-1">
+                <div class="dropdown">
+                    <div class="dropdown-toggle">MEN</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="dropdown">
+                    <div class="dropdown-toggle">WOMEN</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="dropdown">
+                    <div class="dropdown-toggle">KIDS</div>
+                </div>
+            </div>
+            <div class="col-1">
+                <div class="dropdown">
+                    <div class="dropdown-toggle">BRANDS</div>
+                </div>
+            </div>
+            <div class="col-1">
+                SEARCH
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <img src="experience-islandsnow-bootstrap-main.png" class="img-fluid rounded mx-auto d-block py-1 pt-4">
+        </div>
+
+        <footer>
+            <div class="container py-4">
+                <div class="row">
+                    <div class="col">
+                        NAVIGATION
+                        <hr>
+                        <div>About Us</div>
+                        <div>Employment</div>
+                        <div>Videos</div>
+
+                    </div>
+                    <div class="col">
+                        MAIN MENU
+                        <hr>
+                        <div>Men</div>
+                        <div>Women</div>
+                        <div>Kids</div>
+                    </div>
+                    <div class="col">
+                        CONNECT
+                        <hr>
+                        <div>Sign up for the latest updates</div>
+                        <input type="text" placeholder="Enter Email Address">
+                        <div class="btn btn-dark">Join</div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
